# article-mailer

./: .dockerignore  .env.dev  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.ko.md  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: TODO.md  design.md
memory/: MEMORY.md  project_article_mailer.md
src/: index.ts  mailer.py  mailer.ts  main.py  pipeline.py  pipeline.ts  settings.py  settings.ts  summarizer.py  summarizer.ts
src/collector/: arxiv.py  arxiv.ts  base.py  base.ts  hackerNews.ts  hacker_news.py  rss.py  rss.ts
src/db/: models.py  repository.py  repository.ts
src/templates/: email.html  email.txt
src/utils/: retry.ts  url.ts
templates/: email.html  email.txt
tests/: conftest.py  hackerNews.test.ts  mailer.test.ts  pipeline.test.ts  repository.test.ts  retry.test.ts  summarizer.test.ts  test_collector.py  test_mailer.py  test_pipeline.py  test_summarizer.py
